--- a/registration/package.json
+++ b/registration/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.3",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.1",
     "reactstrap": "^9.1.10",
     "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
