--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-awesome-slider": "^4.1.0"
+    "react-awesome-slider": "^4.1.0",
+    "react-router-dom": "^6.11.2"
   }
 }
