--- a/registration/package.json
+++ b/registration/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
     "reactstrap": "^9.1.10",
+    "sass": "^1.62.1",
     "semantic-ui-react": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
