--- a/registration/package.json
+++ b/registration/package.json
@@ -11,6 +11,7 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-multi-carousel": "^2.8.3",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
